--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/MarketTrend/MarketTrend.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/MarketTrend/MarketTrend.cshtml
@@ -122,7 +122,7 @@
                                                                             <div class="l-cardFund__item">
                                                                                 <div class="c-box c-box--goods u-padding-xs u-shadow-animation">
                                                                                     <div class="c-cardFund c-cardFund--half">
-                                                                                        <a href="@index.DetailLink" class="c-cardFund__name s4">
+                                                                                        <a href="@index.DetailLink" class="c-cardFund__name s4" target="_blank">
                                                                                             <div class="u-ellipsis-2">@index.IndexName</div>
                                                                                             <div class="u-ellipsis-1">@index.MarketPriceText</div>
                                                                                         </a>
@@ -206,7 +206,7 @@
                                                                 <span class="o-views o-views--xs">@item.News[0].ViewCount</span>
                                                             </div>
                                                             <div class="c-minorInfo__like">
-                                                                <a href="#" class="o-statusBtn o-statusBtn--sm o-statusBtn--like" data-after="收藏" data-msg="加入收藏|取消收藏" data-ia="true" data-ia-tooltip="false"></a>
+                                                                <a href="#popupLogin" class="o-statusBtn o-statusBtn--sm o-statusBtn--like" data-after="收藏" data-msg="加入收藏|取消收藏" data-popup="true"></a>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -235,7 +235,7 @@
                                                                                 <span class="o-views o-views--xs">@news.ViewCount</span>
                                                                             </div>
                                                                             <div class="c-minorInfo__like">
-                                                                                <a href="#" class="o-statusBtn o-statusBtn--sm o-statusBtn--like is-active" data-after="收藏" data-msg="加入收藏|取消收藏" data-ia="true" data-ia-tooltip="false"></a>
+                                                                                <a href="#popupLogin" class="o-statusBtn o-statusBtn--sm o-statusBtn--like" data-after="收藏" data-msg="加入收藏|取消收藏" data-popup="true"></a>
                                                                             </div>
                                                                         </div>
                                                                     </div>
@@ -570,7 +570,7 @@
                                                                             <div class="l-cardFund__item">
                                                                                 <div class="c-box c-box--goods u-padding-xs u-shadow-animation">
                                                                                     <div class="c-cardFund c-cardFund--half">
-                                                                                        <a href="@index.DetailLink" class="c-cardFund__name s4">
+                                                                                        <a href="@index.DetailLink" class="c-cardFund__name s4" target="_blank">
                                                                                             <div class="u-ellipsis-2">@index.IndexName</div>
                                                                                             <div class="u-ellipsis-1">@index.MarketPriceText</div>
                                                                                         </a>
@@ -653,7 +653,7 @@
                                                                 <span class="o-views o-views--xs">@item.News[0].ViewCount</span>
                                                             </div>
                                                             <div class="c-minorInfo__like">
-                                                                <a href="#" class="o-statusBtn o-statusBtn--sm o-statusBtn--like" data-after="收藏" data-msg="加入收藏|取消收藏" data-ia="true" data-ia-tooltip="false"></a>
+                                                                <a href="#popupLogin" class="o-statusBtn o-statusBtn--sm o-statusBtn--like" data-after="收藏" data-msg="加入收藏|取消收藏" data-popup="true"></a>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -682,7 +682,7 @@
                                                                                 <span class="o-views o-views--xs">@news.ViewCount</span>
                                                                             </div>
                                                                             <div class="c-minorInfo__like">
-                                                                                <a href="#" class="o-statusBtn o-statusBtn--sm o-statusBtn--like is-active" data-after="收藏" data-msg="加入收藏|取消收藏" data-ia="true" data-ia-tooltip="false"></a>
+                                                                                <a href="#popupLogin" class="o-statusBtn o-statusBtn--sm o-statusBtn--like" data-after="收藏" data-msg="加入收藏|取消收藏" data-popup="true"></a>
                                                                             </div>
                                                                         </div>
                                                                     </div>
@@ -1017,7 +1017,7 @@
                                                                             <div class="l-cardFund__item">
                                                                                 <div class="c-box c-box--goods u-padding-xs u-shadow-animation">
                                                                                     <div class="c-cardFund c-cardFund--half">
-                                                                                        <a href="@index.DetailLink" class="c-cardFund__name s4">
+                                                                                        <a href="@index.DetailLink" class="c-cardFund__name s4" target="_blank">
                                                                                             <div class="u-ellipsis-2">@index.IndexName</div>
                                                                                             <div class="u-ellipsis-1">@index.MarketPriceText</div>
                                                                                         </a>
@@ -1100,7 +1100,7 @@
                                                                 <span class="o-views o-views--xs">@item.News[0].ViewCount</span>
                                                             </div>
                                                             <div class="c-minorInfo__like">
-                                                                <a href="#" class="o-statusBtn o-statusBtn--sm o-statusBtn--like" data-after="收藏" data-msg="加入收藏|取消收藏" data-ia="true" data-ia-tooltip="false"></a>
+                                                                <a href="#popupLogin" class="o-statusBtn o-statusBtn--sm o-statusBtn--like" data-after="收藏" data-msg="加入收藏|取消收藏" data-popup="true"></a>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -1129,7 +1129,7 @@
                                                                                 <span class="o-views o-views--xs">@news.ViewCount</span>
                                                                             </div>
                                                                             <div class="c-minorInfo__like">
-                                                                                <a href="#" class="o-statusBtn o-statusBtn--sm o-statusBtn--like is-active" data-after="收藏" data-msg="加入收藏|取消收藏" data-ia="true" data-ia-tooltip="false"></a>
+                                                                                <a href="#popupLogin" class="o-statusBtn o-statusBtn--sm o-statusBtn--like" data-after="收藏" data-msg="加入收藏|取消收藏" data-popup="true"></a>
                                                                             </div>
                                                                         </div>
                                                                     </div>
@@ -1451,7 +1451,7 @@
                 <a href="#popupCurrency" class="o-icon o-icon--tip o-icon--xs" data-popup="true"></a>
             </div>
             <div class="c-cardTable__content">
-                <a href="<%= CurrencyLink %>" class="o-link"><%= CurrencyName %></a>
+                <a href="#popupCurrencyWebSite" class="o-link" data-popup="true"><%= CurrencyName %></a>
             </div>
         </td>
         <td class="c-cardTable__body" data-card-table-width="1/2">
@@ -1491,20 +1491,20 @@
                     <li class="l-collect__item">
                         <!-- [data-after-lt]: pad / mobile 自動顯示文字，值為要顯示的文字 --><!-- [data-ia="true"]: 互動式按鈕功能，hover 顯示 tooltip，點擊後顯示結果訊息 -->
                         <!-- [data-msg]: hover/click 時顯示的提示內容，normal / active 狀態的訊息以 "|" 符號分隔 -->
-                        <a href="#" class="o-statusBtn o-statusBtn--like is-active" data-after-lt="關注" data-msg="加入關注|取消關注" data-ia="true"></a>
+                        <a href="#popupLogin" class="o-statusBtn o-statusBtn--like" data-after-lt="關注" data-msg="加入關注|取消關注" data-popup="true"></a>
                     </li>
                     <li class="l-collect__item">
                         <!-- [data-after-lt]: pad / mobile 自動顯示文字在後方，值為要顯示的文字 -->
                         <!-- [data-ia="true"]: 互動式按鈕功能，hover 顯示 tooltip，點擊後顯示結果訊息 -->
                         <!-- [data-msg]: hover/click 時顯示的提示內容，normal / active 狀態的訊息以 "|" 符號分隔 -->
-                        <a href="#" class="o-statusBtn o-statusBtn--compare is-active" data-after-lt="比較" data-msg="加入比較|取消比較" data-ia="true"></a>
+                        <a href="#popupLogin" class="o-statusBtn o-statusBtn--compare" data-after-lt="比較" data-msg="加入比較|取消比較" data-popup="true"></a>
                     </li>
                 </ul>
             </div>
         </td>
         <td class="c-cardTable__footer" data-card-table-width="1/3">
             <% if (OnlineSubscriptionAvailability == 'Y') { %>
-                <div class="c-cardTable__content"><a href="#popupPurchase" class="o-tableBtn o-tableBtn--card@lt" data-popup="true">申購</a></div>
+                <div class="c-cardTable__content"><a href="#popupLogin" class="o-tableBtn o-tableBtn--card@lt" data-popup="true">申購</a></div>
             <% } %>
         </td>
     </tr>
@@ -1538,7 +1538,7 @@
                 <a href="#popupCurrency" class="o-icon o-icon--tip o-icon--xs" data-popup="true"></a>
             </div>
             <div class="c-cardTable__content">
-                <a href="<%= CurrencyLink %>" class="o-link"><%= CurrencyName %></a>
+                <a href="#popupCurrencyWebSite" class="o-link" data-popup="true"><%= CurrencyName %></a>
             </div>
         </td>
         <td class="c-cardTable__body" data-card-table-width="1/2">
@@ -1578,20 +1578,20 @@
                     <li class="l-collect__item">
                         <!-- [data-after-lt]: pad / mobile 自動顯示文字，值為要顯示的文字 --><!-- [data-ia="true"]: 互動式按鈕功能，hover 顯示 tooltip，點擊後顯示結果訊息 -->
                         <!-- [data-msg]: hover/click 時顯示的提示內容，normal / active 狀態的訊息以 "|" 符號分隔 -->
-                        <a href="#" class="o-statusBtn o-statusBtn--like is-active" data-after-lt="關注" data-msg="加入關注|取消關注" data-ia="true"></a>
+                        <a href="#popupLogin" class="o-statusBtn o-statusBtn--like" data-after-lt="關注" data-msg="加入關注|取消關注" data-popup="true"></a>
                     </li>
                     <li class="l-collect__item">
                         <!-- [data-after-lt]: pad / mobile 自動顯示文字在後方，值為要顯示的文字 -->
                         <!-- [data-ia="true"]: 互動式按鈕功能，hover 顯示 tooltip，點擊後顯示結果訊息 -->
                         <!-- [data-msg]: hover/click 時顯示的提示內容，normal / active 狀態的訊息以 "|" 符號分隔 -->
-                        <a href="#" class="o-statusBtn o-statusBtn--compare is-active" data-after-lt="比較" data-msg="加入比較|取消比較" data-ia="true"></a>
+                        <a href="#popupLogin" class="o-statusBtn o-statusBtn--compare" data-after-lt="比較" data-msg="加入比較|取消比較" data-popup="true"></a>
                     </li>
                 </ul>
             </div>
         </td>
         <td class="c-cardTable__footer" data-card-table-width="1/3">
             <% if (OnlineSubscriptionAvailability == 'Y') { %>
-                <div class="c-cardTable__content"><a href="#popupPurchase" class="o-tableBtn o-tableBtn--card@lt" data-popup="true">申購</a></div>
+                <div class="c-cardTable__content"><a href="#popupLogin" class="o-tableBtn o-tableBtn--card@lt" data-popup="true">申購</a></div>
             <% } %>
         </td>
     </tr>
@@ -1764,6 +1764,9 @@
                 callbacks: {
                     afterFilter: function (result) {
                         window.loading('hide');
+                    },
+                    afterPagination: function () {
+                        $('[data-popup]').magnificPopup();
                     }
                 },
                 search: {},
