--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/USStock/USStock.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/USStock/USStock.cshtml
@@ -452,6 +452,9 @@
                         $('[id="uid-total"]').text(result.length);
 
                         window.loading('hide');
+                    },
+                    afterPagination: function () {
+                        $('[data-popup]').magnificPopup();
                     }
                 },
                 search: {
@@ -621,16 +624,16 @@
 
                         // 申購按鈕
                         let $purchase = suggestion.OnlineSubscriptionAvailability == 'Y' ? suggestion.IsLogin == true ?
-                        `<div class="c-itemKeyword__actions"><a href="#popupPurchase" class="o-btn o-btn--primary o-btn--auto o-btn--thinest" data-popup="true">申購</a></div>` :
-                        `<div class="c-itemKeyword__actions"><a href="#popupLogin" class="o-btn o-btn--primary o-btn--auto o-btn--thinest" data-popup="true">申購</a></div>` : '';
+                            `<div class="c-itemKeyword__actions"><a href="#popupPurchase" class="o-btn o-btn--primary o-btn--auto o-btn--thinest" data-popup="true">申購</a></div>` :
+                            `<div class="c-itemKeyword__actions"><a href="#popupLogin" class="o-btn o-btn--primary o-btn--auto o-btn--thinest" data-popup="true">申購</a></div>` : '';
 
                         return `<div class="c-itemKeyword">
-                                    <a href="${detailUrl}" class="c-itemKeyword__content" target="_blank">
-                                        <div class="c-itemKeyword__title">${$.Autocomplete.defaults.formatResult(suggestion, currentValue)}</div>
-                                    </a>
-                                    <div class="c-itemKeyword__collections">${$like}</div>
-                                    ${$purchase}
-                                </div>`;
+                                            <a href="${detailUrl}" class="c-itemKeyword__content" target="_blank">
+                                                <div class="c-itemKeyword__title">${$.Autocomplete.defaults.formatResult(suggestion, currentValue)}</div>
+                                            </a>
+                                            <div class="c-itemKeyword__collections">${$like}</div>
+                                            ${$purchase}
+                                        </div>`;
                     }
                 });
             });
