--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/MarketTrend/MarketTrend.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/MarketTrend/MarketTrend.cshtml
@@ -1443,7 +1443,7 @@
         <td class="c-cardTable__body" data-card-table-width="1/2">
             <!-- [data-length]: 設定轉換成卡片時，標題的寬度，單位為字數em，範圍1~5字 -->
             <div class="c-cardTable__title" data-length="5">最新淨值</div>
-            <div class="c-cardTable__content"><%= NetAssetValue %></div>
+            <div class="c-cardTable__content"><%= NetAssetValue.toFixed(4) %></div>
         </td>
         <td class="c-cardTable__body" data-card-table-width="1/2">
             <div class="c-cardTable__title" data-length="5">
@@ -1530,7 +1530,7 @@
         <td class="c-cardTable__body" data-card-table-width="1/2">
             <!-- [data-length]: 設定轉換成卡片時，標題的寬度，單位為字數em，範圍1~5字 -->
             <div class="c-cardTable__title" data-length="5">市價</div>
-            <div class="c-cardTable__content"><%= NetAssetValue %></div>
+            <div class="c-cardTable__content"><%= NetAssetValue.toFixed(4) %></div>
         </td>
         <td class="c-cardTable__body" data-card-table-width="1/2">
             <div class="c-cardTable__title" data-length="5">
