修正 autocomplete 連結參數

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFSearch/EtfSearchIndex.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFSearch/EtfSearchIndex.cshtml
@@ -646,7 +646,7 @@
                                     type: 'ETF',
                                     isLogin: false,
                                     isLike: false,
-                                    detailUrl: url + '?' + $.param({ code: item.FirstBankCode }),
+                                    detailUrl: url + '?' + $.param({ id: item.FirstBankCode }),
                                     purchase: item.CanOnlineSubscription
                                 }
                             };
