srcset連結錯誤、自動完成5筆、申購按鈕隱藏版面錯誤

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/MarketTrend/MarketTrend.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/MarketTrend/MarketTrend.cshtml
@@ -195,7 +195,7 @@
                                         <div class="c-box c-box--gapless u-shadow-animation">
                                             <div class="c-gridview">
                                                 <div class="c-gridview__media">
-                                                    <img src="~/themes/images/others/pic1.jpg" class="c-gridview__img" srcset="~/themes/images/articles/huawei__3x.jpg 3x" alt="">
+                                                    <img src="~/themes/images/others/pic1.jpg" class="c-gridview__img" srcset="~/themes/images/others/pic1.jpg" alt="">
                                                 </div>
                                                 <div class="c-gridview__content">
                                                     <a href="@item.News[0].DetailLink" class="c-gridview__title s3 u-ellipsis-2">@item.News[0].Title</a>
@@ -642,7 +642,7 @@
                                         <div class="c-box c-box--gapless u-shadow-animation">
                                             <div class="c-gridview">
                                                 <div class="c-gridview__media">
-                                                    <img src="~/themes/images/others/pic2.jpg" class="c-gridview__img" srcset="~/themes/images/articles/huawei__3x.jpg 3x" alt="">
+                                                    <img src="~/themes/images/others/pic2.jpg" class="c-gridview__img" srcset="~/themes/images/others/pic2.jpg" alt="">
                                                 </div>
                                                 <div class="c-gridview__content">
                                                     <a href="@item.News[0].DetailLink" class="c-gridview__title s3 u-ellipsis-2">@item.News[0].Title</a>
@@ -1089,7 +1089,7 @@
                                         <div class="c-box c-box--gapless u-shadow-animation">
                                             <div class="c-gridview">
                                                 <div class="c-gridview__media">
-                                                    <img src="~/themes/images/others/pic3.jpg" class="c-gridview__img" srcset="~/themes/images/articles/huawei__3x.jpg 3x" alt="">
+                                                    <img src="~/themes/images/others/pic3.jpg" class="c-gridview__img" srcset="~/themes/images/others/pic3.jpg" alt="">
                                                 </div>
                                                 <div class="c-gridview__content">
                                                     <a href="@item.News[0].DetailLink" class="c-gridview__title s3 u-ellipsis-2">@item.News[0].Title</a>
