Update : 規模金額四捨五入

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundDetailDomestic.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundDetailDomestic.cshtml
@@ -4142,7 +4142,7 @@
                                            ${rangeData[i].ScaleDate}
                                                     </td>
                                                     <td>
-                                                         ${numberComma(rangeData[i].Scale.toFixed(2))}
+                                                         ${numberComma(Math.round(rangeData[i].Scale, 3))}
                                                     </td>
                                                     <td>
                                                          ${rangeData[i].Currency}
