--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundDetailOverseas.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundDetailOverseas.cshtml
@@ -4213,7 +4213,7 @@
                                                ${rangeData[i].ScaleDate}
                                                         </td>
                                                         <td>
-                                                             ${numberComma(rangeData[i].Scale)}
+                                                         ${numberComma(Math.round(rangeData[i].Scale, 3))}
                                                         </td>
                                                         <td>
                                                              ${rangeData[i].Currency}
