調整 K線圖 Bug: 滑鼠功能放大，柱狀圖會消失
- 重新排序時間

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFDetail/_TechnicalAnalysis.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFDetail/_TechnicalAnalysis.cshtml
@@ -165,7 +165,7 @@
                             });
 
                             // 重新組織 API dataSource 給 技術分析圖使用
-                            mapData.forEach(item => {
+                            mapData.sort((a, b) => { return a.date - b.date; }).forEach(item => {
                                 ohlc.push([item.date, item.open, item.high, item.low, item.close]);
                                 volume.push({
                                     x: item.date,
