修改風險象限圖，綠點要位於金色點之上

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFDetail/_RiskIndicator.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFDetail/_RiskIndicator.cshtml
@@ -558,6 +558,7 @@
                                     }
                                 },
                                 series: [{
+                                    zIndex: 1,
                                     id: selfData[0].firstBankCode,
                                     name: selfData[0].firstBankCode + ' ' + selfData[0].etfName,
                                     color: '#238C6C',
