呼叫API或查詢資料表若無結果則顯示查無資料

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFDetail/_HistoricalPrices.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFDetail/_HistoricalPrices.cshtml
@@ -672,8 +672,8 @@
                             $('[data-chart="priceTrend"]').find('.c-chartBox, .l-dataNotes').addClass('u-hidden');
                         }
                     }).catch((err) => {
-                        $('[data-chart="priceTrend"]').find('.c-empty').addClass('u-hidden');
-                        $('[data-chart="priceTrend"]').find('.c-chartBox, .l-dataNotes').removeClass('u-hidden');
+                        $('[data-chart="priceTrend"]').find('.c-empty').removeClass('u-hidden');
+                        $('[data-chart="priceTrend"]').find('.c-chartBox, .l-dataNotes').addClass('u-hidden');
                         console.log(err);
                     });
                 } catch (error) {
