--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFDetail/EtfDetailIndex.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFDetail/EtfDetailIndex.cshtml
@@ -9,6 +9,7 @@
         return;
     }
     var etfData = Model.BasicEtf as EtfDetail;
+    string pageId = @Sitecore.Context.Item.ID.ToString();
 }
 
 <div class="l-mainstage">
@@ -44,8 +45,8 @@
                         <div class="c-pageHeader__subContent">
                             <h2 class="c-pageHeader__subTitle">@etfData.ETFEnglishName</h2>
                         </div>
-                        <div class="c-pageHeader__views">
-                            <div class="o-views o-views--bk">@Model.VisitCount</div>
+                        <div class="c-pageHeader__views" data-eh="visit-exec">
+                            <div class="o-views o-views--bk" eh-visit eh-visit-pageid="@pageId" eh-visit-qs="id=@etfData.ProductCode"></div>
                         </div>
                     </div>
                 </div>
