績效/淨值 tab 中的基準指數 title 來源改為 StockIndexName

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFDetail/_Performance.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFDetail/_Performance.cshtml
@@ -596,7 +596,7 @@
         </div>
     </section>
     <section class="c-section u-printBreak">
-        <div class="c-section__title">基準指數-道瓊指數</div>
+        <div class="c-section__title">基準指數-@etfData.StockIndexName</div>
         <div class="c-section__content">
 
             <div class="l-flex u-flex-col u-flex-gap-md">
