--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundDetailOverseas.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundDetailOverseas.cshtml
@@ -142,9 +142,9 @@
                             </li>
                             @if (BasicData.OnlineSubscriptionAvailability.ToBoolean())
                             {
-                        <li class="l-pageWallet__btn">
-                            @Html.SubscriptionButton(null, BasicData.ProductCode, InvestTypeEnum.Fund, false)
-                        </li>
+                                <li class="l-pageWallet__btn">
+                                    @Html.SubscriptionButton(null, BasicData.ProductCode, InvestTypeEnum.Fund, false)
+                                </li>
                             }
                         </ul>
                     </div>
@@ -210,7 +210,7 @@
                             <div class="c-zebraList__title">計價幣別 <a href="#popupCurrency" class="o-icon o-icon--tip o-icon--xs" data-popup="true">i</a></div>
                             <div class="c-zebraList__content">
                                 <span class="t-bold">
-                                    @Html.CurrencyLink(null,BasicData.ValuationCurrency)
+                                    @Html.CurrencyLink(null, BasicData.ValuationCurrency)
                                 </span>
                             </div>
                         </div>
@@ -820,7 +820,7 @@
                             </div>
                             @*台幣*@
                             <div class="l-flex__item u-hidden" data-id="twdReturnTable">
-                                <div class="l-table" >
+                                <div class="l-table">
                                     <table class="c-table u-center u-nowrap" data-fixed-columns="true" data-table="twdReturnTable">
                                         <colgroup>
                                             <col style="width: 14.5%;">
@@ -2784,6 +2784,7 @@
                               });
                   $('#dividend_Select').trigger('change');
             }
+            window.loading = ()=>0;//蓋掉window.loading function
             //切換基金級別Select
             $.ajax({
                 url: `@FundSameLevelApiUrl`,
@@ -2792,7 +2793,6 @@
                 {
                     fundId : fundId
                 },
-                beforeSend: function () {window.loading('show'); },
                 success: function (result) {
                     if (result && result.resultSet.result.length > 0) {
                         const set = new Set();
@@ -2800,16 +2800,21 @@
                         $.each(filterData, function (index, value) {
                             if (filterData[index].v5 === fundId)
                             {
-                                filterData.unshift(filterData[index]);
-                                filterData.splice(index + 1, 1);
+                                //刪除自己基金資料
+                                filterData.splice(index, 1);
                                 return false; //break
                             }
                         });
+                         $('#fundSelect').find("select").append($('<option>', {
+                                    value: "",
+                                    text: "切換基金級別"
+                                }));
                         $.each(filterData, function (index, value) {
                                 $('#fundSelect').find("select").append($('<option>', {
                                     value: value.v5,
                                     text: value.v6
                                 }));
+
                         });
                         $('#fundSelect').find("select").on('change', function () {
                             let value = $(this).val();
@@ -2818,11 +2823,11 @@
                     } else {
                           $('#fundSelect').find("select").addClass('u-hidden');
                     }
-                    window.loading('hide');
                 },
+                complete: function(){$('.c-loading').loading('hide')},
                 error: function (err) {
                     console.log(err);
-                    window.loading('hide');},
+                    $('.c-loading').loading('hide')},
             });
 
             //國內外基金-PDF
