--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundDetailDomestic.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundDetailDomestic.cshtml
@@ -682,7 +682,7 @@
                                 </div>
                             </div>
                             @*原幣*@
-                            <div class="l-flex__item u-hidden" data-id="originReturnTable">
+                            <div class="l-flex__item" data-id="originReturnTable">
                                 <div class="l-table" >
                                     <table class="c-table u-center u-nowrap" data-fixed-columns="true" data-table="originReturnTable">
                                         <colgroup>
