Update : 更新 "NowUrl" Cookie 設定，調整 Cookiebar 元件記 Cookie 方法及元件顯示方式

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/CookieBar/CookieBar.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/CookieBar/CookieBar.cshtml
@@ -7,7 +7,7 @@
     return;
 }
 
-<div class="c-cookies" style="@Model.Style" data-cookie>
+<div class="c-cookies" data-cookie>
     <div class="c-cookies__wrap">
         <div class="c-cookies__box">
             <div class="c-cookies__content">
@@ -33,13 +33,12 @@
                     type: "POST",
                     url: '@ClientRoute.GenerateUrl(this, "CookieBar", "UpdateCookie")',
                     success: function (data) {
-                        console.log(data);
                         if (data.success == true) {
-                            $("[data-cookie]").css("display", "none");
+                            $("[data-cookie]").remove();
                         }
                     },
                     error: function(xhr, status, error) {
-                        console.log(data);
+                        console.log(data.message);
                     }
                 });
             });
